k3d-github/.kubefirst/clusters/mgmt-template/components/minio/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: minio
  namespace: minio
spec:
  entryPoints:
    - websecure
  routes:
  - kind: Rule
    match: Host(`minio.<DOMAIN_NAME>`)
    services:
    - name: minio
      port: 80
  tls:
    secretName: minio-tls
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: minio-console
  namespace: minio
spec:
  entryPoints:
    - websecure
  routes:
  - kind: Rule
    match: Host(`minio-console.<DOMAIN_NAME>`)
    services:
    - name: minio-console
      port: 80
  tls:
    secretName: minio-console-tls
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: minio
spec:
  redirectScheme:
    scheme: https
    permanent: true
